--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^17.0.2",
     "react-hooks-global-state": "^1.0.2",
     "react-scripts": "4.0.1",
